tests/spec/compile-pass/042_try_reserve_before_build.zn
// category: compile-pass
// profile: freestanding
// purpose: tryReserve is the recoverable OOM path for pre-reserving capacity before ordinary pushes

module tests.pass.tryReserveBeforeBuild;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn buildBytes(mut allocator: GlobalAllocator) -> Result<Vector<U8>, AllocError> {
    var bytes = Vector<U8>.withCapacityIn(0, mut allocator);
    try mut bytes.tryReserve(2);
    mut bytes.push(1);
    mut bytes.push(2);
    return Ok(bytes);
}

fn buildText(mut allocator: GlobalAllocator) -> Result<String, AllocError> {
    var text = String.fromIn("", mut allocator);
    try mut text.tryReserve(5);
    mut text.push("hello");
    return Ok(text);
}
