tests/spec/compile-fail/012_vector_push_with_live_slice.zn
// category: compile-fail
// profile: freestanding
// purpose: Vector structural mutation is rejected while a dependent ArraySlice is live

module tests.fail.vectorPushWithLiveSlice;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn bad(mut allocator: GlobalAllocator) -> Result<USize, AllocError> {
    var bytes = Vector<U8>.withCapacityIn(4, mut allocator);
    let slice = bytes.asSlice();
    mut bytes.push(1); // expected-error: vector structural mutation while slice is live
    return Ok(slice.len);
}
